--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ushu Music — Videos</title>
   <meta name="description" content="Ushu Music - All videos (auto from YouTube channel)" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3439536009322291"
+     crossorigin="anonymous"></script>
   <style>
     :root{
       --bg:#080808; --card:#0f1112; --muted:#9aa4b2; --accent:#00eaff;
